fixed alignment of followers/following/posts on user's page

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -110,8 +110,6 @@ a.tab{
     height: 280px;
     margin: 15px;
     img{
-/*    	width: 100%;
-    	height: 300px;*/
     	object-fit: cover;
       width: 100%;
       height: 100%;
